src/main/java/org/example/profiruparser/errors/SearchTimeoutException.java
package org.example.profiruparser.errors;

public class SearchTimeoutException extends SearchException {
    public SearchTimeoutException(String message) {
        super(message);
    }
}
